sdc/sdc-deployment-and-service.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: auth-sdc
    namespace: ns1
    labels:
      app : auth-sdc
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: auth-sdc
    template:
      metadata:
        labels:
          app: auth-sdc
      spec:
        containers:
        - name : auth-sdc
          image: streamsets/datacollector:latest
          ports:
          - containerPort: 18630
- apiVersion: v1
  kind: Service
  metadata:
    name: sdc-service
    namespace: ns1
    labels:
      app: sdc-service
      service: sdc-service
  spec:
    type: NodePort
    ports:
    - name: http
      port: 18636
      targetPort: 18630
      protocol: TCP
    selector:
      app: sdc-service
