sdc/sdc-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sdc-virtualservice
spec:
  hosts:
  - '*'
  gateways:
  - istio-system/sdc-gateway
  http:
  - route:
    - destination:
        host: auth-sdc-service
